flux/infra/prometheus-operator/https-redirect-middleware.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect-middleware
  namespace: prometheus-operator
spec:
  redirectScheme:
    scheme: https
    permanent: true
