flux/infra/prometheus-operator/snmp_exporter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snmp-exporter
  namespace: prometheus-operator
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: snmp-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: snmp-exporter
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      securityContext:
        readOnlyRootFilesystem: true
      containers:
        - name: snmp-exporter
          image: prom/snmp-exporter:v0.30.1
          podSecurityContext:
            fsGroup: 2000
            fsGroupChangePolicy: "Always"
          ports:
            - name: prom
              containerPort: 9116
              protocol: TCP

          livenessProbe:
            tcpSocket:
              port: prom
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "100M"
              cpu: ".1"
            limits:
              memory: "100M"
              cpu: ".1"
