flux/infra/prometheus-operator/snmp_exporter_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: snmp-exporter
  namespace: prometheus-operator
  labels:
    app.kubernetes.io/name: snmp-exporter

spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: snmp-exporter
  ports:
    - name: prom
      port: 9116
      targetPort: prom
      protocol: TCP
