flux/infra/prometheus-operator/httproute-alertmanager.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-web-route
  namespace: prometheus-operator
spec:
  parentRefs:
    - name: main-gateway
      namespace: traefik

  hostnames:
    - alertmanager.tartarus.us

  rules:
    - backendRefs:
        - name: prometheus-operator-kube-p-alertmanager
          port: 9093
