flux/infra/prometheus-operator/httproute-grafana.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-web-route
  namespace: prometheus-operator
spec:
  parentRefs:
    - name: main-gateway
      namespace: traefik

  hostnames:
    - grafana.tartarus.us

  rules:
    - backendRefs:
        - name: prometheus-operator-grafana
          port: 80
